# RACECAR_DATA

./: .gitmodules  README.md  bag_construct.ipynb  bag_to_images.py  draft_registry.yaml  extract_construct.ipynb  image_tools.py  local_odom_conversion.py  nuscenes_tutorial.ipynb  racecar_parse.py  racecar_utils.py  rosbag_exam.ipynb
.github/workflows/: build-ci.yaml
conversion_configs/: cav_slow_poli.yaml  mit_slow_kaist.yaml  tum_fast_poli.yaml
conversion_configs/ims/: cav_slow_70.yaml  euro_fast_100_140.yaml  poli_fast_140.yaml  tum_fast_100_140.yaml  tum_pylon.yaml
conversion_configs/lvms/: cav_slow_70.yaml  cav_slow_70_100.yaml  cav_slow_poli.yaml  euro_fast_100_140.yaml  euro_fast_140.yaml  euro_fast_tum.yaml  euro_slow_tum.yaml  mit_fast_100_140.yaml  mit_slow_70.yaml  mit_slow_70_100.yaml  mit_slow_kaist.yaml  poli_slow_70.yaml  tum_fast_140.yaml  tum_fast_euro.yaml  tum_fast_poli.yaml  tum_slow_euro.yaml
delphi_esr_msgs/msg/: EsrEthTx.msg  EsrStatus2.msg  EsrStatus4.msg  EsrStatus5.msg  EsrStatus6.msg  EsrStatus7.msg  EsrStatus8.msg  EsrStatus9.msg  EsrTrackMotionPower.msg  EsrValid1.msg  EsrValid2.msg  EsrVehicle1.msg  EsrVehicle4.msg  EsrVehicle5.msg
novatel_oem7_msgs/: CMakeLists.txt  package.xml
racecar_configs/: av21.urdf
racecar_py/: README.md  local_odom_conversion.py  racecar_utils.py  rosbag_exam.ipynb
racecar_utils/: CMakeLists.txt  package.xml
racecar_utils/config/: ekf.yaml
racecar_utils/include/: convert_imu_msg.hpp  odom_to_tf.hpp
racecar_utils/launch/: localization.launch.py  odom_to_tf.launch.py
racecar_utils/rviz/: cameras.rviz  lidar_tf.rviz
racecar_utils/src/: convert_imu_msg.cpp  odom_to_tf.cpp  rosbag_merger.cpp
racecar_utils/urdf/: av21_euro.urdf
ros2_custom_msgs/delphi_esr_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_custom_msgs/delphi_esr_msgs/msg/: EsrStatus1.msg  EsrStatus3.msg  EsrTrack.msg  EsrVehicle2.msg  EsrVehicle3.msg  TrackMotionPower.msg
ros2_custom_msgs/novatel_oem7_msgs/msg/: RAWIMU.msg
